fixes dark mode.

--- a/assets/css/_mixin/_link.scss
+++ b/assets/css/_mixin/_link.scss
@@ -4,7 +4,7 @@
 
     color: if($light, $global-link-color, $single-link-color);
 
-    [theme=dark] & {
+    @media (prefers-color-scheme: dark) {
       color: if($dark, $global-link-color-dark, $single-link-color-dark);
     }
   }
@@ -13,7 +13,7 @@
   a:hover {
     color: if($light, $global-link-hover-color, $single-link-hover-color);
 
-    [theme=dark] & {
+    @media (prefers-color-scheme: dark) {
       color: if($dark, $global-link-hover-color-dark, $single-link-hover-color-dark);
     }
   }
