--- a/assets/css/_partial/_single/_footer.scss
+++ b/assets/css/_partial/_single/_footer.scss
@@ -5,13 +5,10 @@
     border-bottom: 1px solid $global-border-color;
     padding: 1rem 0 0.3rem;
 
-<<<<<<< HEAD
-=======
-    [theme=dark] & {
+    @media (prefers-color-scheme: dark) {
       border-bottom: 1px solid $global-border-color-dark;
     }
 
->>>>>>> pr/2
     .post-info-line {
       display: flex;
       justify-content: space-between;
@@ -20,88 +17,32 @@
         font-size: 0.8em;
         color: $global-font-secondary-color;
 
-<<<<<<< HEAD
-        a {
-          color: $single-link-color;
-
-          &:hover {
-            color: $single-link-hover-color;
-          }
-        }
-=======
-        [theme=dark] & {
+        @media (prefers-color-scheme: dark) {
           color: $global-font-secondary-color-dark;
         }
 
         @include link(false, false);
->>>>>>> pr/2
       }
 
       .post-info-license {
         font-size: 0.8em;
         color: $global-font-secondary-color;
-<<<<<<< HEAD
-=======
 
-        [theme=dark] & {
+        @media (prefers-color-scheme: dark) {
           color: $global-font-secondary-color-dark;
         }
->>>>>>> pr/2
       }
 
       .post-info-md {
         font-size: 0.8rem;
         width: 8rem;
 
-<<<<<<< HEAD
-        a {
-          color: $single-link-color;
-
-          &:hover {
-            color: $single-link-hover-color;
-          }
-        }
-      }
-    }
-  }
-
-  @media (prefers-color-scheme: dark) {
-    .post-info {
-      border-bottom: 1px solid $global-border-color-dark;
-
-      .post-info-line {
-        .post-info-mod {
-          color: $global-font-secondary-color-dark;
-
-          a {
-            color: $single-link-color-dark;
-
-            &:hover {
-              color: $single-link-hover-color-dark;
-            }
-          }
-        }
-
-        .post-info-license {
-          color: $global-font-secondary-color-dark;
-        }
-
-        .post-info-md {
-          a {
-            color: $single-link-color-dark;
-
-            &:hover {
-              color: $single-link-hover-color-dark;
-            }
-          }
-=======
         @include link(false, false);
       }
 
       .post-info-share {
         a * {
           vertical-align: text-bottom;
->>>>>>> pr/2
         }
       }
     }
